samples/_failures_safe/1761714309_e5154e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f08c1870.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f08c1870.c:171:24: error: expected ‘;’ at end of input
  171 |             success = 1
      |                        ^
      |                        ;
./samples/SAFE/__tmp_f08c1870.c:171:13: error: expected declaration or statement at end of input
  171 |             success = 1
      |             ^~~~~~~
./samples/SAFE/__tmp_f08c1870.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f08c1870.c:171:13: error: expected declaration or statement at end of input
